# voice-serve

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  railway.json
app/: main.py
app/db/: __init__.py  connection.py  tickets.py  wakeup.py
app/helpers/: config.py  logger.py  prompt_loader.py  regional.py
app/prompts/: default.txt  options_summary.txt  orchestrator.txt  product_research.txt  query_analyzer.txt  store_caller.txt  transcript_analyzer.txt  web_deals.txt
app/routes/: logistics_routes.py  ticket_routes.py  vapi_webhook_routes.py
app/schemas/: __init__.py  tool_handlers.py  vapi_tools.py
app/scripts/: retry_scheduled_call.py
app/services/: gemini_client.py  geocoding.py  google_maps.py  logistics.py  options_summary.py  orchestrator.py  product_research.py  store_caller.py  transcript_analyzer.py  vapi_client.py  wakeup_scheduler.py  web_deals.py
frontend/: package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: query-panel.tsx  tracking-panel.tsx
frontend/src/components/ui/: tabs.tsx
frontend/src/lib/: api.ts
